# CineGen

./: Cargo.toml  README.md  UPCOMING_RELEASE.md  electron-builder.yml  electron.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.cursor/rules/: upcoming-release-changelog.mdc
crates/cinegen-engine/: Cargo.toml
dist-electron/: main.js  models--j8coq92.js  models-4c2xlp8t.js  models-6yBe1GKT.js  models-847CQGg6.js  models-BA8IpjHn.js  models-BDPDzItU.js  models-BDwl630I.js  models-BJ8nBK3y.js  models-BKDx3_0S.js  models-BQUcXICI.js  models-BU_BhnYz.js  models-BVY8_1xd.js  models-Bd2n0UMj.js  models-BhNKuT-1.js  models-BlEEgxFk.js  models-Bnk14MO-.js  models-C3rnoblw.js  models-CCWJA5aJ.js  models-CMjf95B-.js  models-CNUN7Fu7.js  models-CSZM17gr.js  models-CWR-JyUW.js  models-CXM1O85T.js  models-C_jSF4Jl.js  models-C_ul5STD.js  models-CckJEZWX.js  models-CdiBQB8k.js  models-CeKUrRdW.js  models-Cgf7uLRh.js  models-Cxf5s8Dh.js  models-D-zeohnP.js  models-D4GWZKJ-.js  models-D4qly00A.js  models-D89ttqnh.js  models-DGSLi5qu.js  models-DJ0KvwU3.js  models-DLPN-ZcV.js  models-DQeWd2Gb.js  models-DUI44sxE.js  (+23 more)
dist-electron/workers/: audio-sync-BNiKXpbA.js  audio-sync-BNyrw2P2.js  audio-sync-BPUOxlIi.js  audio-sync-BR6cTrbb.js  (+27 more)
docs/: reddit-post.md  reddit-post.txt
electron/: main.ts  preload.ts  splash.html  window.ts
scripts/: build-native-avf.mjs  download-fpcalc.sh  take-screenshots.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
(+234 files in other folders)
